--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+# The NEXT_PUBLIC_URL is used to generate invitation links and billing return URLs
+# It should be the hostname of your application with protocol (e.g. https://example.com)
+NEXT_PUBLIC_URL=http://localhost:3000
